tests/expectations/compiler/finalize/rand_incorrect_num_operands.out
DCE_ENABLED:
Error [ETYC0372006]: Call expected `0` args, but got `1`
    --> compiler-test:11:24
     |
  11 |         let a: field = ChaCha::rand_field(1field);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `0` args, but got `2`
    --> compiler-test:12:24
     |
  12 |         let b: field = ChaCha::rand_field(1field, 2field);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372006]: Call expected `0` args, but got `1`
    --> compiler-test:11:24
     |
  11 |         let a: field = ChaCha::rand_field(1field);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `0` args, but got `2`
    --> compiler-test:12:24
     |
  12 |         let b: field = ChaCha::rand_field(1field, 2field);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
